# Halcyon

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakeSettings.json  Halcyon debug output.txt  HalodaQuest.code-workspace  Makefile  README.md  app.cpp  app.hpp  camera.cpp  camera.hpp  config.cmake  easing.hpp  game.cpp  game.hpp  intro.cpp  intro.hpp  level.cpp  level.hpp  main.cpp  manager.hpp  meson.build  mono_app.cpp  mono_app.hpp  scene.cpp  scene.hpp  types.hpp
AL++/: base.hpp  config.cmake  debug.hpp  decoder.hpp  get_set.hpp  listener.hpp  state.hpp  types.hpp
AL++/decoder/: mp3.hpp
AL++/include/AL++/: listener.hpp  source.hpp  state.hpp
AL++/src/: base.cpp  debug.cpp  decoder.cpp  listener.cpp  state.cpp
HalQ/: components.hpp  entity.hpp  game.hpp  manager.hpp
HalQ/src/: app.cpp  game.cpp  main.cpp
asset2code/: config.cmake
asset2code/src/: main.cpp
chess/: main.cpp  moves.hpp  piece.hpp
ecs/: base.hpp  component.hpp  component_manager.hpp  entity.cpp  entity.hpp  entity_manager.hpp  info.hpp  manager.cpp  manager.hpp  pool.cpp  pool.hpp  scene.cpp  scene.hpp
ecs/base/: atp.hpp  entity.hpp  scene.hpp
ecs/base/cmgr/: balanced.hpp  static.hpp
ents/: components.hpp  entity.cpp  entity.hpp  manager.hpp
examples/: CMakeLists.txt  audio.cpp  events.cpp  invertor.cpp  message_box.cpp  metaprogramming.cpp  safety.cpp  structure.cpp  text_render.cpp
halcyon/: audio.hpp  cleanup.hpp  config.cmake  console.cpp  console.hpp  debug.cpp  debug.hpp  draw.cpp  draw.hpp  ecs.hpp  engine.cpp  engine.hpp  events.hpp  font_loader.cpp  font_loader.hpp  halcyon.cpp  halcyon.hpp  image_loader.cpp  image_loader.hpp  input_handler.cpp  input_handler.hpp  mixer.cpp  mixer.hpp  mono_app.cpp  mono_app.hpp  renderer.hpp  spritesheet.cpp  spritesheet.hpp  system.hpp  texture.cpp  texture.hpp  ttf_engine.cpp  ttf_engine.hpp  types.hpp  window.cpp  window.hpp  window_manager.cpp  window_manager.hpp
halcyon/audio/: base.hpp  buffer.hpp  decoder.hpp  get_set.hpp  listener.hpp  object.hpp  source.hpp
halcyon/components/: chunk.cpp  chunk.hpp  display_info.cpp  display_info.hpp  font.cpp  font.hpp  music.cpp  music.hpp  renderer.cpp  renderer.hpp  sdl_object.hpp  surface.cpp  surface.hpp
halcyon/ecs/: ecs.hpp
halcyon/enums/: anchor.hpp  blend.hpp  buttons.hpp  colors.hpp  scale.hpp  severity.hpp
halcyon/events/: animation.hpp  binder.hpp  queue.hpp  scheduler.hpp
halcyon/halcyon/: debug.hpp  image_loader.hpp  input_handler.hpp  mixer.hpp  renderer.hpp  texture.hpp  window.hpp
halcyon/halcyon/components/: SDL_object.hpp  chunk.hpp  font.hpp  music.hpp  surface.hpp
halcyon/halcyon/enums/: blend.hpp  buttons.hpp  scaler.hpp
halcyon/halcyon/internal/: SDL_types.hpp  drawer.hpp  helpers.hpp  printing.hpp  subsystem.hpp  tags.hpp
halcyon/halcyon/src/: debug.cpp  image_loader.cpp  mixer.cpp  renderer.cpp  texture.cpp  ttf_engine.cpp  window.cpp
halcyon/halcyon/types/: color.hpp  point.hpp  rectangle.hpp  render.hpp  slider.hpp
halcyon/include/halcyon/: cleanup.hpp  debug.hpp  events.hpp  halcyon.hpp  image_loader.hpp  images.hpp  renderer.hpp  surface.hpp  texture.hpp  ttf.hpp  ttf_engine.hpp  window.hpp
halcyon/internal/: SDL_types.hpp  al.hpp  component.hpp  config.hpp  drawer.hpp  helpers.hpp  printing.hpp  sdl_types.hpp  subsystem.cpp  subsystem.hpp  tags.hpp
halcyon/other/: printing.hpp  subsystem.hpp
halcyon/src/: cleanup.cpp  debug.cpp  engine.cpp  events.cpp  image_loader.cpp  images.cpp  input_handler.cpp  mixer.cpp  renderer.cpp  spritesheet.cpp  subsystem.cpp  surface.cpp  system.cpp  texture.cpp  ttf.cpp  ttf_engine.cpp  window.cpp
halcyon/src/audio/: base.cpp  buffer.cpp  decoder.cpp  listener.cpp  source.cpp
halcyon/src/components/: chunk.cpp  font.cpp  music.cpp  renderer.cpp  surface.cpp
halcyon/src/internal/: accessor.cpp  event_types.cpp  printing.cpp  subsystem.cpp  system.cpp
halcyon/types/: buttons.hpp  color.hpp  colors.hpp  music.hpp  other.hpp  packed_array.hpp  point.hpp  rectangle.hpp  render.hpp  slider.hpp  sparse_array.hpp  tags.hpp  types.hpp
include/halcyon/: audio.hpp  cleanup.hpp  context.hpp  debug.hpp  driver.hpp  event.hpp  events.hpp  image.hpp  keyboard.hpp  mouse.hpp  printing.hpp  renderer.hpp  surface.hpp  texture.hpp  ttf.hpp  video.hpp  window.hpp
lib/: lyoSTL
lib/lyoSTL/: config.cmake
lyo/: argparse.hpp  bitset.hpp  buffer.hpp  capsule.hpp  cast.hpp  concepts.hpp  config.cmake  packed_array.hpp  pass_key.hpp  slider.hpp  sparse_array.hpp  stack_polymorphism.hpp  static_vector.hpp  tags.hpp  timer.hpp  types.hpp  utility.hpp
lyoECS/lyoECS/: component_manager.hpp  entity.hpp  scene.hpp
lyoSTL/: config.cmake
lyoSTL/lyo/: stack_polymorphism.hpp  static_vector.hpp  timer.hpp  types.hpp
lyoSTL/lyoSTL/: concepts.hpp  math.hpp  static_vector.hpp  tags.hpp  timer.hpp  types.hpp  utility.hpp
quest/: config.cmake  constants.hpp  easing.hpp  entities.hpp  entity_manager.hpp  game.hpp  main.cpp
quest/quest/: constants.hpp  easing.hpp  game.hpp  sprite.hpp  types.hpp
quest/src/: camera.cpp  entities.cpp  game.cpp  main.cpp  spritesheet.cpp
quest/states/: menu.hpp  paused.hpp
src/: audio.cpp  context.cpp  debug.cpp  driver.cpp  event.cpp  events.cpp  game.cpp  image.cpp  keyboard.cpp  mouse.cpp  printing.cpp  surface.cpp  templates.cpp  texture.cpp  ttf.cpp  video.cpp
src/audio/: device.cpp  spec.cpp  stream.cpp  types.cpp
src/event/: event.cpp  handler.cpp  keyboard.cpp  mouse.cpp  types.cpp
src/events/: handler.cpp  holder.cpp  keyboard.cpp  mouse.cpp
src/internal/: accessor.cpp  outputter.cpp  rwops.cpp  scaler.cpp  sdl_rwops.cpp  string.cpp
src/other/: clipboard.cpp  display.cpp  keyboard_mouse.cpp  printing.cpp
src/types/: color.cpp  events.cpp  point.cpp  rectangle.cpp  render.cpp  templates.cpp
src/utility/: printing.cpp  strutil.cpp  timer.cpp
src/video/: display.cpp  driver.cpp  message_box.cpp  renderer.cpp  texture.cpp  types.cpp  window.cpp
test/: classes.hpp  data.hpp  event.cpp  hal_main.cpp  main.cpp  moves.hpp  piece.hpp  test.cpp
(+161 files in other folders)
